--- a/index.html
+++ b/index.html
@@ -37,26 +37,26 @@
     
     <section class="hero-fon">
         <h1 class="hero">Эффективные решения для вашего бизнеса</h1>
-        <button class="hero-button" type="button" style="cursor: pointer">Заказать услугу</button>
+        <button class="hero-button" type="button">Заказать услугу</button>
     </section>
     
     <!-- Oсобенности---FEATURE--->
     <section class="container">
     <h2 class="feature-title visually-hidden">Oсобенности</h2>    
     <ul class="feature">
-        <li>
+        <li class="item">
             <h3 class="feature-primary-text">Внимание к деталям</h3>
             <p class="feature-secondary-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
         </li>
-        <li>
+        <li class="item">
             <h3 class="feature-primary-text">Пунктуальность</h3>
             <p class="feature-secondary-text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
         </li>
-        <li>
+        <li class="item">
             <h3 class="feature-primary-text">Планирование</h3>
             <p class="feature-secondary-text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
         </li>
-        <li>
+        <li class="item">
             <h3 class="feature-primary-text">Современные технологии</h3>
             <p class="feature-secondary-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
         </li>
