--- a/portfolio.html
+++ b/portfolio.html
@@ -40,11 +40,11 @@
         <section>
             <h1 class="portfolio visually-hidden">Список проектов</h1>
         <ul class="portfolio-button">
-            <li class="item"><button type="button" style="cursor: pointer">Все</button></li>
-            <li class="item"><button type="button" style="cursor: pointer">Веб-сайты</button></li>
-            <li class="item"><button type="button" style="cursor: pointer">Приложения</button></li>
-            <li class="item"><button type="button" style="cursor: pointer">Дизайн</button></li>
-            <li class="item"><button type="button" style="cursor: pointer">Маркетинг</button></li>
+            <li class="item"><button type="button">Все</button></li>
+            <li class="item"><button type="button">Веб-сайты</button></li>
+            <li class="item"><button type="button">Приложения</button></li>
+            <li class="item"><button type="button">Дизайн</button></li>
+            <li class="item"><button type="button">Маркетинг</button></li>
         </ul>
         <div class="container">
         <ul class="flex-container">
