--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
 </ul>
 </nav>
 <ul class="address-header">
-    <li class="item"><a class="address-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+    <li class="item">
+     
+        <a class="address-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
     <li class="item"><a class="address-link" href="tel:+380961111111">+38 096 111 11 11</a></li>
 </ul>
 </div>
@@ -104,6 +106,24 @@
             </li>
         </ul>
         </div>
+    </section>
+    <section class="clients">
+<div class="conteiner">
+    <h2 class="clients-title">Постоянные клиенты</h2>
+    <ul class="clients-logo">
+        <li class="item"><a href="">
+            <svg width="106" height="60">
+                <use href="./images/sprite.svg#icon-logo1"></use>
+            </svg>
+        </a></li>
+        <li class="item"><a href=""></a></li>
+        <li class="item"><a href=""></a></li>
+        <li class="item"><a href=""></a></li>
+        <li class="item"><a href=""></a></li>
+        <li class="item"><a href=""></a></li>
+    </ul>
+</div>
+
     </section>
     </main>
     <footer class="footer">
