--- a/portfolio.html
+++ b/portfolio.html
@@ -25,7 +25,7 @@
                     <span class="accent">Web</span>Studio</a>
                 <ul class="navigation">
                     <li class="item"><a class="navigation-link" href="./index.html">Студия</a></li>
-                    <li class="item current"><a class="navigation-link" href="./portfolio.html">Портфолио</a></li>
+                    <li class="item"><a class="navigation-link current" href="./portfolio.html">Портфолио</a></li>
                     <li class="item"><a class="navigation-link" href="">Контакты</a></li>
                 </ul>
             </nav>
