--- a/index.html
+++ b/index.html
@@ -21,16 +21,22 @@
         <a class="logo" href="/">
             <span class="accent">Web</span>Studio</a>
         <ul class="navigation">
-    <li class="item current"><a class="navigation-link" href="/">Студия</a></li>
+    <li class="item"><a class="navigation-link current" href="/">Студия</a></li>
     <li class="item"><a class="navigation-link" href="./portfolio.html">Портфолио</a></li>
     <li class="item"><a class="navigation-link" href="">Контакты</a></li>
 </ul>
 </nav>
 <ul class="address-header">
     <li class="item">
-     
+        <svg class="envelope">
+            <use href="./images/sprite.svg#icon-envelope"></use>
+        </svg>
         <a class="address-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-    <li class="item"><a class="address-link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+    <li class="item">
+        <svg class="smartphone">
+            <use href="./images/sprite.svg#icon-smartphone"></use>
+        </svg>
+        <a class="address-link" href="tel:+380961111111">+38 096 111 11 11</a></li>
 </ul>
 </div>
     </header>    
@@ -88,39 +94,147 @@
                 <img src="./images/team1.jpg" alt="Мужчина" width="270">
                 <h3 class="team-name">Игорь Демьяненко</h3>
                 <p class="team-duty">Product Designer</p>
+                <ul class="team-sociallinks">
+                    <li class="link"><a href="">
+                        <svg class="icon">
+                            <use href="./images/sprite.svg#icon-instagram"></use>
+                        </svg>
+                    </a></li>
+                    <li class="link"><a href="">
+                            <svg class="icon">
+                                <use href="./images/sprite.svg#icon-twitter"></use>
+                            </svg>
+                        </a></li>
+                    <li class="link"><a href="">
+                            <svg class="icon">
+                                <use href="./images/sprite.svg#icon-facebook"></use>
+                            </svg>
+                        </a></li>
+                    <li class="link"><a href="">
+                                <svg class="icon">
+                                    <use href="./images/sprite.svg#icon-linkedin"></use>
+                                </svg>
+                        </a></li>
+                </ul>
             </li>
             <li class="item">
                 <img src="./images/team2.jpg" alt="Женщина" width="270">
                 <h3 class="team-name">Ольга Репина</h3>
                 <p class="team-duty">Frontend Developer</p>
+                <ul class="team-sociallinks">
+                    <li class="link"><a href="">
+                            <svg class="icon">
+                                <use href="./images/sprite.svg#icon-instagram"></use>
+                            </svg>
+                        </a></li>
+                    <li class="link"><a href="">
+                            <svg class="icon">
+                                <use href="./images/sprite.svg#icon-twitter"></use>
+                            </svg>
+                        </a></li>
+                    <li class="link"><a href="">
+                            <svg class="icon">
+                                <use href="./images/sprite.svg#icon-facebook"></use>
+                            </svg>
+                        </a></li>
+                    <li class="link"><a href="">
+                            <svg class="icon">
+                                <use href="./images/sprite.svg#icon-linkedin"></use>
+                            </svg>
+                        </a></li>
+                </ul>
             </li>
             <li class="item">
                 <img src="./images/team3.jpg" alt="Мужчина" width="270">
                 <h3 class="team-name">Николай Тарасов</h3>
                 <p class="team-duty">Marketing</p>
+                <ul class="team-sociallinks">
+                    <li class="link"><a href="">
+                            <svg class="icon">
+                                <use href="./images/sprite.svg#icon-instagram"></use>
+                            </svg>
+                        </a></li>
+                    <li class="link"><a href="">
+                            <svg class="icon">
+                                <use href="./images/sprite.svg#icon-twitter"></use>
+                            </svg>
+                        </a></li>
+                    <li class="link"><a href="">
+                            <svg class="icon">
+                                <use href="./images/sprite.svg#icon-facebook"></use>
+                            </svg>
+                        </a></li>
+                    <li class="link"><a href="">
+                            <svg class="icon">
+                                <use href="./images/sprite.svg#icon-linkedin"></use>
+                            </svg>
+                        </a></li>
+                </ul>
             </li>
             <li class="item">
                 <img src="./images/team4.jpg" alt="Мужчина" width="270">
                 <h3 class="team-name">Михаил Ермаков</h3>
                 <p class="team-duty">UI Designer</p>
+                <ul class="team-sociallinks">
+                    <li class="link"><a href="">
+                            <svg class="icon">
+                                <use href="./images/sprite.svg#icon-instagram"></use>
+                            </svg>
+                        </a></li>
+                    <li class="link"><a href="">
+                            <svg class="icon">
+                                <use href="./images/sprite.svg#icon-twitter"></use>
+                            </svg>
+                        </a></li>
+                    <li class="link"><a href="">
+                            <svg class="icon">
+                                <use href="./images/sprite.svg#icon-facebook"></use>
+                            </svg>
+                        </a></li>
+                    <li class="link"><a href="">
+                            <svg class="icon">
+                                <use href="./images/sprite.svg#icon-linkedin"></use>
+                            </svg>
+                        </a></li>
+                </ul>
             </li>
         </ul>
         </div>
     </section>
     <section class="clients">
-<div class="conteiner">
+<div class="container">
     <h2 class="clients-title">Постоянные клиенты</h2>
     <ul class="clients-logo">
         <li class="item"><a href="">
-            <svg width="106" height="60">
-                <use href="./images/sprite.svg#icon-logo1"></use>
+            <svg class="icon">
+                <use href="./images/sprite.svg#icon-Logo1"></use>
             </svg>
         </a></li>
-        <li class="item"><a href=""></a></li>
-        <li class="item"><a href=""></a></li>
-        <li class="item"><a href=""></a></li>
-        <li class="item"><a href=""></a></li>
-        <li class="item"><a href=""></a></li>
+        <li class="item"><a href="">
+            <svg class="icon">
+                <use href="./images/sprite.svg#icon-Logo2"></use>
+            </svg>
+        </a></li>
+        <li class="item"><a href="">
+            <svg class="icon">
+                <use href="./images/sprite.svg#icon-Logo3"></use>
+            </svg>
+        </a></li>
+        <li class="item"><a href="">
+            <svg class="icon">
+                <use href="./images/sprite.svg#icon-Logo4"></use>
+            </svg>
+        </a></li>
+        <li class="item"><a href="">
+            <svg class="icon">
+                <use href="./images/sprite.svg#icon-Logo5"></use>
+            </svg>
+        </a></li>
+        <li class="item"><a href="">
+            <svg class="icon">
+                <use href="./images/sprite.svg#icon-Logo6"></use>
+            </svg>
+        </a></li>
     </ul>
 </div>
 
@@ -128,6 +242,7 @@
     </main>
     <footer class="footer">
         <div class="container">
+            <div>
         <a class="logo" href="/"><span class="accent">Web</span>Studio</a>
         <address>
         <ul class="address-footer">
@@ -138,6 +253,33 @@
             <li><a class="address-tel" href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
         </address>
+    </div>
+        <div class="join">
+            <h2 class="join-title">присоединяйтесь</h2>
+            <ul class="join-sociallinks">
+                <li class="link"><a href="">
+                        <svg class="icon">
+                            <use href="./images/sprite.svg#icon-instagram"></use>
+                        </svg>
+                    </a></li>
+                <li class="link"><a href="">
+                        <svg class="icon">
+                            <use href="./images/sprite.svg#icon-twitter"></use>
+                        </svg>
+                    </a></li>
+                <li class="link"><a href="">
+                        <svg class="icon">
+                            <use href="./images/sprite.svg#icon-facebook"></use>
+                        </svg>
+                    </a></li>
+                <li class="link"><a href="">
+                        <svg class="icon">
+                            <use href="./images/sprite.svg#icon-linkedin"></use>
+                        </svg>
+                    </a></li>
+            </ul>
+
+        </div>
         </div>
     </footer>
 </body>
