--- a/index.html
+++ b/index.html
@@ -28,15 +28,18 @@
 </nav>
 <ul class="address-header">
     <li class="item">
-        <svg class="envelope">
-            <use href="./images/sprite.svg#icon-envelope"></use>
-        </svg>
-        <a class="address-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        
+        <a class="address-link" href="mailto:info@devstudio.com">
+            <svg class="envelope">
+                <use href="./images/icons.svg#icon-envelope"></use>
+            </svg>
+            info@devstudio.com</a></li>
     <li class="item">
-        <svg class="smartphone">
-            <use href="./images/sprite.svg#icon-smartphone"></use>
+        
+        <a class="address-link" href="tel:+380961111111"><svg class="smartphone">
+            <use href="./images/icons.svg#icon-smartphone"></use>
         </svg>
-        <a class="address-link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+        +38 096 111 11 11</a></li>
 </ul>
 </div>
     </header>    
@@ -53,18 +56,34 @@
     <h2 class="feature-title visually-hidden">Oсобенности</h2>    
     <ul class="feature">
         <li class="item">
+            <div>
+            <svg class="antenna">
+                <use href="./images/icons.svg#icon-antenna"></use>
+            </svg></div>
             <h3 class="feature-primary-text">Внимание к деталям</h3>
             <p class="feature-secondary-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
         </li>
         <li class="item">
+            <div>
+            <svg class="clock">
+                <use href="./images/icons.svg#icon-clock"></use>
+            </svg></div>
             <h3 class="feature-primary-text">Пунктуальность</h3>
             <p class="feature-secondary-text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
         </li>
         <li class="item">
+            <div>
+            <svg class="diagram">
+                <use href="./images/icons.svg#icon-diagram"></use>
+            </svg></div>
             <h3 class="feature-primary-text">Планирование</h3>
             <p class="feature-secondary-text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
         </li>
         <li class="item">
+            <div>
+            <svg class="astronaut">
+                <use href="./images/icons.svg#icon-astronaut"></use>
+            </svg></div>
             <h3 class="feature-primary-text">Современные технологии</h3>
             <p class="feature-secondary-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
         </li>
@@ -97,22 +116,22 @@
                 <ul class="team-sociallinks">
                     <li class="link"><a href="">
                         <svg class="icon">
-                            <use href="./images/sprite.svg#icon-instagram"></use>
+                            <use href="./images/icons.svg#icon-instagram"></use>
                         </svg>
                     </a></li>
                     <li class="link"><a href="">
                             <svg class="icon">
-                                <use href="./images/sprite.svg#icon-twitter"></use>
+                                <use href="./images/icons.svg#icon-twitter"></use>
                             </svg>
                         </a></li>
                     <li class="link"><a href="">
                             <svg class="icon">
-                                <use href="./images/sprite.svg#icon-facebook"></use>
+                                <use href="./images/icons.svg#icon-facebook"></use>
                             </svg>
                         </a></li>
                     <li class="link"><a href="">
                                 <svg class="icon">
-                                    <use href="./images/sprite.svg#icon-linkedin"></use>
+                                    <use href="./images/icons.svg#icon-linkedin"></use>
                                 </svg>
                         </a></li>
                 </ul>
@@ -124,22 +143,22 @@
                 <ul class="team-sociallinks">
                     <li class="link"><a href="">
                             <svg class="icon">
-                                <use href="./images/sprite.svg#icon-instagram"></use>
+                                <use href="./images/icons.svg#icon-instagram"></use>
                             </svg>
                         </a></li>
                     <li class="link"><a href="">
                             <svg class="icon">
-                                <use href="./images/sprite.svg#icon-twitter"></use>
+                                <use href="./images/icons.svg#icon-twitter"></use>
                             </svg>
                         </a></li>
                     <li class="link"><a href="">
                             <svg class="icon">
-                                <use href="./images/sprite.svg#icon-facebook"></use>
+                                <use href="./images/icons.svg#icon-facebook"></use>
                             </svg>
                         </a></li>
                     <li class="link"><a href="">
                             <svg class="icon">
-                                <use href="./images/sprite.svg#icon-linkedin"></use>
+                                <use href="./images/icons.svg#icon-linkedin"></use>
                             </svg>
                         </a></li>
                 </ul>
@@ -151,22 +170,22 @@
                 <ul class="team-sociallinks">
                     <li class="link"><a href="">
                             <svg class="icon">
-                                <use href="./images/sprite.svg#icon-instagram"></use>
+                                <use href="./images/icons.svg#icon-instagram"></use>
                             </svg>
                         </a></li>
                     <li class="link"><a href="">
                             <svg class="icon">
-                                <use href="./images/sprite.svg#icon-twitter"></use>
+                                <use href="./images/icons.svg#icon-twitter"></use>
                             </svg>
                         </a></li>
                     <li class="link"><a href="">
                             <svg class="icon">
-                                <use href="./images/sprite.svg#icon-facebook"></use>
+                                <use href="./images/icons.svg#icon-facebook"></use>
                             </svg>
                         </a></li>
                     <li class="link"><a href="">
                             <svg class="icon">
-                                <use href="./images/sprite.svg#icon-linkedin"></use>
+                                <use href="./images/icons.svg#icon-linkedin"></use>
                             </svg>
                         </a></li>
                 </ul>
@@ -178,22 +197,22 @@
                 <ul class="team-sociallinks">
                     <li class="link"><a href="">
                             <svg class="icon">
-                                <use href="./images/sprite.svg#icon-instagram"></use>
+                                <use href="./images/icons.svg#icon-instagram"></use>
                             </svg>
                         </a></li>
                     <li class="link"><a href="">
                             <svg class="icon">
-                                <use href="./images/sprite.svg#icon-twitter"></use>
+                                <use href="./images/icons.svg#icon-twitter"></use>
                             </svg>
                         </a></li>
                     <li class="link"><a href="">
                             <svg class="icon">
-                                <use href="./images/sprite.svg#icon-facebook"></use>
+                                <use href="./images/icons.svg#icon-facebook"></use>
                             </svg>
                         </a></li>
                     <li class="link"><a href="">
                             <svg class="icon">
-                                <use href="./images/sprite.svg#icon-linkedin"></use>
+                                <use href="./images/icons.svg#icon-linkedin"></use>
                             </svg>
                         </a></li>
                 </ul>
@@ -207,32 +226,32 @@
     <ul class="clients-logo">
         <li class="item"><a href="">
             <svg class="icon">
-                <use href="./images/sprite.svg#icon-Logo1"></use>
+                <use href="./images/icons.svg#icon-Logo1"></use>
             </svg>
         </a></li>
         <li class="item"><a href="">
             <svg class="icon">
-                <use href="./images/sprite.svg#icon-Logo2"></use>
+                <use href="./images/icons.svg#icon-Logo2"></use>
             </svg>
         </a></li>
         <li class="item"><a href="">
             <svg class="icon">
-                <use href="./images/sprite.svg#icon-Logo3"></use>
+                <use href="./images/icons.svg#icon-Logo3"></use>
             </svg>
         </a></li>
         <li class="item"><a href="">
             <svg class="icon">
-                <use href="./images/sprite.svg#icon-Logo4"></use>
+                <use href="./images/icons.svg#icon-Logo4"></use>
             </svg>
         </a></li>
         <li class="item"><a href="">
             <svg class="icon">
-                <use href="./images/sprite.svg#icon-Logo5"></use>
+                <use href="./images/icons.svg#icon-Logo5"></use>
             </svg>
         </a></li>
         <li class="item"><a href="">
             <svg class="icon">
-                <use href="./images/sprite.svg#icon-Logo6"></use>
+                <use href="./images/icons.svg#icon-Logo6"></use>
             </svg>
         </a></li>
     </ul>
@@ -259,22 +278,22 @@
             <ul class="join-sociallinks">
                 <li class="link"><a href="">
                         <svg class="icon">
-                            <use href="./images/sprite.svg#icon-instagram"></use>
+                            <use href="./images/icons.svg#icon-instagram"></use>
                         </svg>
                     </a></li>
                 <li class="link"><a href="">
                         <svg class="icon">
-                            <use href="./images/sprite.svg#icon-twitter"></use>
+                            <use href="./images/icons.svg#icon-twitter"></use>
                         </svg>
                     </a></li>
                 <li class="link"><a href="">
                         <svg class="icon">
-                            <use href="./images/sprite.svg#icon-facebook"></use>
+                            <use href="./images/icons.svg#icon-facebook"></use>
                         </svg>
                     </a></li>
                 <li class="link"><a href="">
                         <svg class="icon">
-                            <use href="./images/sprite.svg#icon-linkedin"></use>
+                            <use href="./images/icons.svg#icon-linkedin"></use>
                         </svg>
                     </a></li>
             </ul>
