--- a/portfolio.html
+++ b/portfolio.html
@@ -31,19 +31,18 @@
             </nav>
             <ul class="address-header">
                 <li class="item">
-    
                     <a class="address-link" href="mailto:info@devstudio.com">
                         <svg class="envelope">
                             <use href="./images/icons.svg#icon-envelope"></use>
                         </svg>
-                        info@devstudio.com</a>
+                        <span>info@devstudio.com</span></a>
                 </li>
                 <li class="item">
-    
-                    <a class="address-link" href="tel:+380961111111"><svg class="smartphone">
+                    <a class="address-link" href="tel:+380961111111">
+                        <svg class="smartphone">
                             <use href="./images/icons.svg#icon-smartphone"></use>
                         </svg>
-                        +38 096 111 11 11</a>
+                        <span>+38 096 111 11 11</span></a>
                 </li>
             </ul>
         </div>
