--- a/index.html
+++ b/index.html
@@ -28,18 +28,17 @@
 </nav>
 <ul class="address-header">
     <li class="item">
-        
         <a class="address-link" href="mailto:info@devstudio.com">
             <svg class="envelope">
                 <use href="./images/icons.svg#icon-envelope"></use>
             </svg>
-            info@devstudio.com</a></li>
+            <span>info@devstudio.com</span></a></li>
     <li class="item">
-        
-        <a class="address-link" href="tel:+380961111111"><svg class="smartphone">
-            <use href="./images/icons.svg#icon-smartphone"></use>
-        </svg>
-        +38 096 111 11 11</a></li>
+        <a class="address-link" href="tel:+380961111111">
+            <svg class="smartphone">
+                <use href="./images/icons.svg#icon-smartphone"></use>
+            </svg>
+            <span>+38 096 111 11 11</span></a></li>
 </ul>
 </div>
     </header>    
